Fix z-index sidebar

--- a/src/app/layout/styles/_content.scss
+++ b/src/app/layout/styles/_content.scss
@@ -43,7 +43,8 @@
 
 .view-content {
     position: relative;
-
+    z-index: 5;
+    
     display: flex;
 
     width: 100%;
