--- a/src/app/layout/styles/_sidebar.scss
+++ b/src/app/layout/styles/_sidebar.scss
@@ -1,4 +1,6 @@
 .sidebar {
+    position: relative;
+    z-index: 10;
     .layout-root & {
         position: relative;
         z-index: 3;
